<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/BackgroundActivity"
    tools:context="com.example.lgapp.DadosPessoais">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/BackgroundButton">

        <TextView
            android:text="@string/DadosPessoais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="25dp"
            android:textColor="#ff00093f"
            android:layout_gravity="center_horizontal"
            style="@style/BackgroundButton" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout3"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/EditNome_Cadastro"
                    android:hint="@string/Nome"
                    style="@style/EditText"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:hint="@string/DataNascimento"
                    style="@style/EditText"
                    android:id="@+id/EditDataNasc_Cadastro" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/EditAltura_Cadastro"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Altura"
                    style="@style/EditText"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_edittext"
                android:layout_weight="0.57"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Esportes"
                        android:textSize="20dp"
                        style="@style/TextWhite"
                        android:id="@+id/textView2" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Futebol"
                        android:id="@+id/CheckFutebol_Cadastro"
                        style="@style/TextWhite"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Volei"
                        style="@style/TextWhite"
                        android:id="@+id/CheckVolei_Cadastro" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tenis"
                        style="@style/TextWhite"
                        android:id="@+id/CheckTenis_Cadastro"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    >

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Futsal"
                        style="@style/TextWhite"
                        android:layout_marginTop="25dp"
                        android:id="@+id/CheckFutsal_Cadastro"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Basquete"
                        style="@style/TextWhite"
                        android:id="@+id/CheckBasquete_Cadastro"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Concluir"
                android:textSize="20dp"
                android:id="@+id/ButConcluir_Cadastro"
                android:layout_marginBottom="10dp"
                android:textColor="@color/custom_button"
                style="@style/BackgroundButton" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Voltar"
                android:textSize="20dp"
                android:textColor="@color/custom_button"
                android:id="@+id/ButVoltar_Cadastro"
                style="@style/BackgroundButton" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
