<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                style="@style/BackgroundActivity"
                tools:context="com.example.lgapp.Menu">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <Button
            android:id="@+id/ButPerfil_Menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="#ffff"
            android:text="@string/Perfil"
            android:textColor="@color/custom_button"
            android:textSize="20dp"
            android:layout_weight="0.2"/>

        <Button
            android:id="@+id/ButPartidas_Menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ffff"
            android:text="@string/Partidas"
            android:textColor="@color/custom_button"
            android:textSize="20dp"
            android:layout_weight="0.2"/>

        <Button
            android:id="@+id/ButBuscador_Menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ffff"
            android:text="@string/Buscador"
            android:textColor="@color/custom_button"
            android:textSize="20dp"
            android:layout_weight="0.2"/>

        <Button
            android:id="@+id/ButConfig_Menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ffff"
            android:text="@string/Configuracoes"
            android:textColor="@color/custom_button"
            android:textSize="20dp"
            android:layout_weight="0.2"/>

        <Button
            android:id="@+id/ButSair_Menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:text="@string/Logout"
            android:textColor="@color/custom_button"
            android:textSize="20dp"
            android:layout_weight="0.2"/>

    </LinearLayout>
</RelativeLayout>
