<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/BackgroundActivity"
    tools:context=".LoginActivity"
    android:focusableInTouchMode="false">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#ffff"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Login"
            style="@style/TextView"
            android:textSize="25dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_below="@+id/linearLayout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/EditUsuario_Login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Usuario"
                    style="@style/EditText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/EditSenha_Login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/EditText"
                    android:hint="@string/Senha"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout3"
            android:orientation="vertical">

            <Button
                android:id="@+id/ButEntrar_Login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/BackgroundButton"
                android:text="@string/Entrar"
                android:textColor="@color/custom_button"
                android:textSize="20dp" />

            <Button
                android:id="@+id/ButRegistrar_Login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#ffff"
                android:text="@string/Registrar"
                android:textColor="@color/custom_button"
                android:textSize="20dp" />

            <Button
                android:id="@+id/ButEsqueceuSenha_Login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:text="@string/EsqueceuSenha"
                android:textColor="@color/custom_button"
                android:textSize="20dp" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
